--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     // 웹 애플리케이션 기본 스타터 (Spring MVC 포함)
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    // WebJars: 외부 CDN 없이 정적 자산(예: Font Awesome) 로컬 제공
+    implementation 'org.webjars:font-awesome:4.7.0'
+
     // 테스트 기본 스타터 (JUnit, AssertJ 등)
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // Spring REST Docs(MockMvc) — 테스트에서 스니펫 생성
